--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -5,9 +5,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
-      "*": ["src/*"]
+      "*": ["*"]
     }
   }
 }
