--- a/Frontend/android/app/src/main/AndroidManifest.xml
+++ b/Frontend/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:icon="@mipmap/binder_logo_foreground"
+      android:roundIcon="@mipmap/binder_logo_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
