--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,11 +13,14 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^19.1.0",
     "@react-native-firebase/auth": "^19.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/dotenv": "^8.2.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-date-picker": "^5.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-toast-message": "^2.2.0"
