--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-toast-message": "^2.2.0"
