--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/abeezee": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-firebase/app": "^19.1.0",
     "@react-native-firebase/auth": "^19.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/dotenv": "^8.2.0",
+    "expo-font": "^11.10.3",
+    "expo-modules-core": "^1.11.13",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.1",
