--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,12 +22,15 @@
     "expo-font": "^11.10.3",
     "expo-modules-core": "^1.11.13",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-native": "0.73.6",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-date-picker": "^5.0.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
