--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@devvie/bottom-sheet": "^0.3.0",
     "@expo-google-fonts/abeezee": "^0.2.3",
+    "@gorhom/bottom-sheet": "^4.6.3",
+    "@gorhom/portal": "^1.0.14",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
@@ -22,13 +25,17 @@
     "@types/dotenv": "^8.2.0",
     "expo-font": "^11.10.3",
     "expo-modules-core": "^1.11.13",
+    "invariant": "^2.2.4",
     "react": "18.2.0",
     "react-content-loader": "^7.0.0",
     "react-native": "0.73.6",
     "react-native-alert-notification": "^0.4.0",
     "react-native-date-picker": "^5.0.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.3.0",
