--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,24 +23,34 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/dotenv": "^8.2.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^5.1.0",
+    "@zegocloud/zego-uikit-rn": "^2.9.2",
     "expo-font": "^11.10.3",
     "expo-modules-core": "^1.11.13",
     "invariant": "^2.2.4",
     "react": "18.2.0",
     "react-content-loader": "^7.0.0",
+    "react-delegate-component": "^1.0.0",
     "react-native": "0.73.6",
     "react-native-alert-notification": "^0.4.0",
     "react-native-date-picker": "^5.0.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-permissions": "^4.1.5",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.12.0",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webrtc": "^124.0.1",
+    "socket.io-client": "^4.7.5",
+    "zego-express-engine-reactnative": "^3.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
