--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
+    "@types/ws": "^8.5.10",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "ws": "^8.17.1"
   }
 }
