--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keep-awake": "^4.0.0",
     "react-native-permissions": "^4.1.5",
     "react-native-raw-bottom-sheet": "^3.0.0",
